--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /modul-3/Praktikum3/build/
 /modul-3/Praktikum3/dist/
 /modul-3/UTS/nbproject/private/
+/modul-4/praktikum4/nbproject/private/
+/modul-4/praktikum4/build/
+/modul-4/praktikum4/dist/
